--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,38 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url(https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap);
+
+:root {
+  --header-height: 60px;
+  --search-height: 40px
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+* {
+  box-sizing: border-box;
+  font-family: Roboto, sans-serif;
+  margin: 0
+}
+
+body {
+  font-size: 16px;
+  font-weight: 400
+}
+
+button, input {
+  background-color: transparent;
+  border: none;
+  outline: none;
+  padding: 0
+}
+
+svg {
+  fill: currentColor;
+  height: 1em;
+  width: 1em
+}
+
+hr {
+  background-color: #f1f1f2;
+  border: none;
+  height: 1px;
+  margin: 16px 0;
+  width: 100%
 }
